--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 // This is your MongoDB database connection string.
-MONGODB_URI=
+MONGODB_URI=mongodb+srv://skociuba83:FE1gt808ovp8P0GE@cluster0.idd0e.mongodb.net/
 
 // How to generate a GitHub client id and secret: 
 // 1. Go to https://github.com/settings/developers and create a new OAuth application
@@ -11,11 +11,11 @@ MONGODB_URI=
 // 7. Generate a new client secret and copy that too.
 // 8. Once your application is deployed, edit the homepage & callback URLs to match your deployment URL.
 
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
+GITHUB_CLIENT_ID=f4d2f2b3de3a9165a281
+GITHUB_CLIENT_SECRET=f4bfbe2404b8f4061063eb5e34b8b977
 
 // Generate one here: https://generate-secret.vercel.app/32
-NEXTAUTH_SECRET=
+NEXTAUTH_SECRET=9aaf4e819ecdc40fe0c7ffd450e55c044185ec99
 
 // You don't need to define this variable in prod (only for localhost)
 NEXTAUTH_URL=http://localhost:3000/api/auth
